ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/Customer_Dedupe_Response__c.object-meta.xml
<CustomObject>
    <label>Customer Dedupe Response</label>
    <nameField>
        <displayFormat>CDR-{000000}</displayFormat>
        <label>Customer Dedupe Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Dedupe Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>