ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/CIC_No__c.field-meta.xml
<CustomField>
    <fullName>CIC_No__c</fullName>
    <label>CIC No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>