ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/CIF_ID__c.field-meta.xml
<CustomField>
    <fullName>CIF_ID__c</fullName>
    <label>CIF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>