ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/CIN_No__c.field-meta.xml
<CustomField>
    <fullName>CIN_No__c</fullName>
    <label>CIN No</label>
    <length>17</length>
    <type>Text</type>
</CustomField>