ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>