ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/Customer_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Flag__c</fullName>
    <label>Customer Status Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>