ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/Deal_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status_Flag__c</fullName>
    <label>Deal Status Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>