ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/Dedupe_Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Journey_Status__c</fullName>
    <label>Dedupe Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Continued</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>