ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/Dedupe_Journey_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Journey_Status_Reason__c</fullName>
    <label>Dedupe Journey Status Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>