ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/External_Dedupe_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Dedupe_Status__c</fullName>
    <label>External Dedupe Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>