ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/IND_isNewCustomer__c.field-meta.xml
<CustomField>
    <fullName>IND_isNewCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNewCustomer</label>
    <type>Checkbox</type>
</CustomField>