ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/Invalid_Customer_Code_By_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Customer_Code_By_Sales_User__c</fullName>
    <label>Invalid Customer Code By Sales User</label>
    <length>70</length>
    <type>Text</type>
</CustomField>