ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/Is_Journey_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Is_Journey_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Journey Skipped</label>
    <type>Checkbox</type>
</CustomField>