ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/fields/PG_Cust_Dedupe__c.field-meta.xml
<CustomField>
    <fullName>PG_Cust_Dedupe__c</fullName>
    <label>PG Customer Dedupe Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>