ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Response__c</columns>
    <columns>Customer_Code__c</columns>
    <columns>Invalid_Customer_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>