ProdIND/ProdPrograms/force-app/main/default/objects/Customer_Dedupe_Response__c/listViews/Customer_Dedupe_Responses.listView-meta.xml
<ListView>
    <fullName>Customer_Dedupe_Responses</fullName>
    <columns>NAME</columns>
    <columns>CIN_No__c</columns>
    <columns>CIC_No__c</columns>
    <columns>Applicant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Customer Dedupe Responses</label>
</ListView>